✅ Primeiro commit: Frontend web + App móvel com Flutter

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-# Node.js
+# Arquivos temporários e builds
 node_modules/
 package-lock.json
-
-# Flutter
+build/
 .dart_tool/
-.build/
-.packages
-.flutter-plugins
-.flutter-plugins-dependencies
-/pubspec.lock
-/build/
-android/app/src/main/AndroidManifest.xml
-ios/Flutter/AppFrameworkInfo.plist
+.pub-cache/
+flutter/.dart_tool/
+flutter/build/
+
+# Configurações de IDEs
+*.iml
+.idea/
+.vscode/
+*.log
