--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
-# Arquivos temporários e builds
+# Pastas do build
 node_modules/
-package-lock.json
 build/
 .dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
 .pub-cache/
 flutter/.dart_tool/
-flutter/build/
 
-# Configurações de IDEs
+# Arquivos sensíveis
+.env
 *.iml
+*.log
+semsub@gmail.com*
+id_ed25519*
+id_rsa*
+
+# Configurações IDEs
 .idea/
 .vscode/
-*.log
